2005-03-17  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/GrampsGconfKeys.py (get_bool,get_int,get_string): Raise
	exception when default value could not be get from gconf schema
	* src/const.py.in: Add custom exception "ErrorSchemaInvalid"
	* src/GrampsMime.py (mime_type_is_defined): New method that returns
	True/False
	* src/gramps_main.py (__init__): Catch "ErrorSchemaInvalid" exception
	and check for installed MIME-type. Show error because installation is
	incomplete.
	
2005-03-17  Alex Roitman  <shura@gramps-project.org>
	* acinclude.m4: Add macro for defining SHARED_MIME_DIR.
	* configure.in: Use AM_SHARED_MIME macro.
	* src/data/Makefile.am: Use defined GCONF_SCHEMA_FILE_DIR and
	SHARED_MIME_DIR, not the hardcoded paths.

	* src/Errors.py (GConfSchemaError): Add new exception.
	* src/const.py.in: Remove exception string "ErrorSchemaInvalid"
	(replaced by new class).
	* src/GrampsGconfKeys.py (get_bool,get_int,get_string): Raise exception.

2005-03-17  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/Exporter.py (build_info_page): proofreading; (build_format_page):
	shrink the size of the window by using tooltips to display the
	format description.
	* src/plugins/ExportVCard.py: New (unfinished) plugin to export
	addresses to pim applications.
	* src/plugins/vcardexport.glade: GUI for the Exporter Druid of
	vCard export
	* src/plugins/ExportVCalendar.py: New (unfinished) plugin to export
	events for calendaring applications.
	* src/plugins/vcalendarexport.glade: GUI for the Exporter Druid
	of vCalendar export

2005-03-16  Alex Roitman  <shura@gramps-project.org>
	* src/GenericFilter.py (HasTextMatchingSubstringOf): Minor.
	* src/plugins/FilterEditor.py (EditRule:__init__): Typo.
	* ChangeLog.old: Add to CVS the pre-2005 ChangeLog; Split off current.

2005-03-16  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/GenericFilter.py (HasTextMatchingSubstringOf): add checkboxes for case and